--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t gkhunashvili109/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run gkhunashvili109/docker-react npm run test -- --coverage
+  - docker run -e CI=true gkhunashvili109/docker-react npm run test 
